--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
     <header class="bg-darkBlack flex px-4 py-12 justify-center items-center fixed top-0 inset-x-0">
         <div class="flex">
             <h2 class="mr-16 hover:text-white"><a href="#projects">Projects</a></h2>
-            <h2 class="hover:text-white"><a href="#contact">Contact</a></h2>
+            <h2 class="mr-16 hover:text-white"><a href="#contact">Contact</a></h2>
+            <h2 class="hover:text-white"><a href="Resume (Jefferyi Magtubo).docx.pdf" download="">Resume</a></h2>
         </div>
     </header>
 
