Added new project

--- a/index.html
+++ b/index.html
@@ -78,9 +78,18 @@
             <p class="mt-4 mb-8">All of my projects are listed below with their respective code and link to its live version.</p>
             <div class="flex flex-wrap mt-2 ">
                 <div class="flex flex-col items-center justify-center p-8 lg:w-1/2 hover:shadow-white">
+                    <img src="entertainwebapp.PNG" class="w-4/5 xs:hidden sm:block ">
+                    <h1 class="text-2xl mt-4 underline font-bold ">Entertainment Web Application</h1>
+                    <p>A web app for a fictional entertainment app. Made with React and Tailwind CSS. Fully responsive (Videos aren't actually playable.).</p>
+                    <div class="mt-4">
+                        <a href="https://jeffentertainmentwebapp.netlify.app/" target="_blank" class="inline-block bg-lttrbxdGreen mr-4 text-white font-bold p-1.5 rounded-lg hover:bg-green-700">Live Site</a>
+                        <a href="https://github.com/Jefferyi-Magtubo/Entertainment-Web-App" target="_blank" class="inline-block bg-lttrbxdOrg text-white font-bold  p-1.5 rounded-lg hover:bg-orange-600">Code</a>
+                    </div>
+                </div>
+                <div class="flex flex-col items-center justify-center p-8 lg:w-1/2 hover:shadow-white">
                     <img src="moveierecsite.PNG" class="w-4/5 xs:hidden sm:block">
                     <h1 class="text-2xl mt-4 underline font-bold ">Movie Recommender</h1>
-                    <p>An app that allows users to select a movie they like, pick what they liked about (the director, actors, cinematographer), and get a recommendation that has those selections.</p>
+                    <p>An app that allows users to select a movie they like, pick what they liked about, and get a recommendation that has those selections.</p>
                     <div class="mt-4">
                         <a href="https://jeffsmovierecommender.netlify.app/" target="_blank" class="inline-block bg-lttrbxdGreen mr-4 text-white font-bold p-1.5 rounded-lg hover:bg-green-700">Live Site</a>
                         <a href="https://github.com/Jefferyi-Magtubo/Movie-Recommender" target="_blank" class="inline-block bg-lttrbxdOrg text-white font-bold  p-1.5 rounded-lg hover:bg-orange-600">Code</a>
@@ -89,7 +98,7 @@
                 <div class="flex flex-col items-center justify-center p-8 lg:w-1/2 hover:shadow-white">
                     <img src="pic2quiz.PNG" class="w-4/5 xs:hidden sm:block">
                     <h1 class="text-2xl mt-4 underline font-bold ">Trivia App</h1>
-                    <p>An app that allows users to select a movie they like, pick what they liked about (the director, actors, cinematographer), and get a recommendation that has those selections.</p>
+                    <p>An app that allows users to select a category, and get five questions to answer about that category. Made with React, JavaScript, and CSS.</p>
                     <div class="mt-4">
                         <a href="https://entertainementrivia.netlify.app/" target="_blank" class="inline-block bg-lttrbxdGreen mr-4 text-white font-bold p-1.5 rounded-lg hover:bg-green-700">Live Site</a>
                         <a href="https://github.com/Jefferyi-Magtubo/Entertainment-Trivia" target="_blank" class="inline-block bg-lttrbxdOrg text-white font-bold  p-1.5 rounded-lg hover:bg-orange-600">Code</a>
