Added new skills

--- a/index.html
+++ b/index.html
@@ -58,8 +58,10 @@
                     <p class="p-1 rounded-md bg-slate-900 mr-2 mb-2">TypeScript</p>
                     <p class="p-1 rounded-md bg-slate-900 mr-2 mb-2">JavaScript</p>
                     <p class="p-1 rounded-md bg-slate-900 mr-2 mb-2">Tailwind CSS</p>
+                    <p class="p-1 rounded-md bg-slate-900 mr-2 mb-2">SASS</p>
                     <p class="p-1 rounded-md bg-slate-900 mr-2 mb-2">CSS</p>
                     <p class="p-1 rounded-md bg-slate-900 mr-2 mb-2">HTML</p>
+                    <p class="p-1 rounded-md bg-slate-900 mr-2 mb-2">Wordpress</p>
                     <p class="p-1 rounded-md bg-slate-900 mr-2 mb-2">Responsive Design</p>
                     <p class="p-1 rounded-md bg-slate-900 mr-2 mb-2">Figma</p>
                     <p class="p-1 rounded-md bg-slate-900 mr-2 mb-2">Git</p>
