--- a/index.html
+++ b/index.html
@@ -98,6 +98,15 @@
                     </div>
                 </div>
                 <div class="flex flex-col items-center justify-center p-8 lg:w-1/2 hover:shadow-white">
+                    <img src="memorygame.PNG" class="w-4/5 xs:hidden sm:block ">
+                    <h1 class="text-2xl mt-4 underline font-bold ">Memory Game</h1>
+                    <p>A web app game to test your memory. Made with React, TypeScript, and CSS> </p>
+                    <div class="mt-4">
+                        <a href="https://jeffmemorygame.netlify.app/" target="_blank" class="inline-block bg-lttrbxdGreen mr-4 text-white font-bold p-1.5 rounded-lg hover:bg-green-700">Live Site</a>
+                        <a href="https://github.com/Jefferyi-Magtubo/Memory-Game" target="_blank" class="inline-block bg-lttrbxdOrg text-white font-bold  p-1.5 rounded-lg hover:bg-orange-600">Code</a>
+                    </div>
+                </div>
+                <div class="flex flex-col items-center justify-center p-8 lg:w-1/2 hover:shadow-white">
                     <img src="pic2quiz.PNG" class="w-4/5 xs:hidden sm:block">
                     <h1 class="text-2xl mt-4 underline font-bold ">Trivia App</h1>
                     <p>An app that allows users to select a category, and get five questions to answer about that category. Made with React, JavaScript, and CSS.</p>
