Adjusted text size on 2xl screens

--- a/index.html
+++ b/index.html
@@ -81,53 +81,53 @@
             <div class="flex flex-wrap mt-2 ">
                 <div class="flex flex-col items-center justify-center p-8 lg:w-1/2 hover:shadow-white">
                     <img src="entertainwebapp.PNG" class="w-4/5 xs:hidden sm:block ">
-                    <h1 class="text-2xl mt-4 underline font-bold ">Entertainment Web Application</h1>
-                    <p>A web app for a fictional entertainment app. Made with React and Tailwind CSS. Fully responsive (Videos aren't actually playable.).</p>
+                    <h1 class="text-3xl mt-4 underline font-bold ">Entertainment Web Application</h1>
+                    <p class="2xl:text-xl">A web app for a fictional entertainment app. Made with React and Tailwind CSS. Fully responsive (Videos aren't actually playable.).</p>
                     <div class="mt-4">
-                        <a href="https://jeffentertainmentwebapp.netlify.app/" target="_blank" class="inline-block bg-lttrbxdGreen mr-4 text-white font-bold p-1.5 rounded-lg hover:bg-green-700">Live Site</a>
-                        <a href="https://github.com/Jefferyi-Magtubo/Entertainment-Web-App" target="_blank" class="inline-block bg-lttrbxdOrg text-white font-bold  p-1.5 rounded-lg hover:bg-orange-600">Code</a>
+                        <a href="https://jeffentertainmentwebapp.netlify.app/" target="_blank" class="inline-block bg-lttrbxdGreen mr-4 text-white font-bold p-1.5 rounded-lg hover:bg-green-700 2xl:text-xl">Live Site</a>
+                        <a href="https://github.com/Jefferyi-Magtubo/Entertainment-Web-App" target="_blank" class="inline-block bg-lttrbxdOrg text-white font-bold  p-1.5 rounded-lg hover:bg-orange-600 2xl:text-xl">Code</a>
                     </div>
                 </div>
                 <div class="flex flex-col items-center justify-center p-8 lg:w-1/2 hover:shadow-white">
                     <img src="moveierecsite.PNG" class="w-4/5 xs:hidden sm:block">
-                    <h1 class="text-2xl mt-4 underline font-bold ">Movie Recommender</h1>
-                    <p>An app that allows users to select a movie they like, pick what they liked about, and get a recommendation that has those selections.</p>
+                    <h1 class="text-3xl mt-4 underline font-bold ">Movie Recommender</h1>
+                    <p class="2xl:text-xl">An app that allows users to select a movie they like, pick what they liked about, and get a recommendation that has those selections.</p>
                     <div class="mt-4">
-                        <a href="https://jeffsmovierecommender.netlify.app/" target="_blank" class="inline-block bg-lttrbxdGreen mr-4 text-white font-bold p-1.5 rounded-lg hover:bg-green-700">Live Site</a>
-                        <a href="https://github.com/Jefferyi-Magtubo/Movie-Recommender" target="_blank" class="inline-block bg-lttrbxdOrg text-white font-bold  p-1.5 rounded-lg hover:bg-orange-600">Code</a>
+                        <a href="https://jeffsmovierecommender.netlify.app/" target="_blank" class="inline-block bg-lttrbxdGreen mr-4 text-white font-bold p-1.5 rounded-lg hover:bg-green-700 2xl:text-xl">Live Site</a>
+                        <a href="https://github.com/Jefferyi-Magtubo/Movie-Recommender" target="_blank" class="inline-block bg-lttrbxdOrg text-white font-bold  p-1.5 rounded-lg hover:bg-orange-600 2xl:text-xl">Code</a>
                     </div>
                 </div>
                 <div class="flex flex-col items-center justify-center p-8 lg:w-1/2 hover:shadow-white">
                     <img src="memorygame.PNG" class="w-4/5 xs:hidden sm:block ">
-                    <h1 class="text-2xl mt-4 underline font-bold ">Memory Game</h1>
-                    <p>A web app game to test your memory. Made with React, TypeScript, and CSS> </p>
+                    <h1 class="text-3xl mt-4 underline font-bold ">Memory Game</h1>
+                    <p class="2xl:text-xl">A web app game to test your memory. Choose between a 4x4 or 6x6 grid Made with React, TypeScript, and Tailwind CSS. </p>
                     <div class="mt-4">
-                        <a href="https://jeffmemorygame.netlify.app/" target="_blank" class="inline-block bg-lttrbxdGreen mr-4 text-white font-bold p-1.5 rounded-lg hover:bg-green-700">Live Site</a>
-                        <a href="https://github.com/Jefferyi-Magtubo/Memory-Game" target="_blank" class="inline-block bg-lttrbxdOrg text-white font-bold  p-1.5 rounded-lg hover:bg-orange-600">Code</a>
+                        <a href="https://jeffmemorygame.netlify.app/" target="_blank" class="inline-block bg-lttrbxdGreen mr-4 text-white font-bold p-1.5 rounded-lg hover:bg-green-700 2xl:text-xl">Live Site</a>
+                        <a href="https://github.com/Jefferyi-Magtubo/Memory-Game" target="_blank" class="inline-block bg-lttrbxdOrg text-white font-bold  p-1.5 rounded-lg hover:bg-orange-600 2xl:text-xl">Code</a>
                     </div>
                 </div>
                 <div class="flex flex-col items-center justify-center p-8 lg:w-1/2 hover:shadow-white">
                     <img src="pic2quiz.PNG" class="w-4/5 xs:hidden sm:block">
-                    <h1 class="text-2xl mt-4 underline font-bold ">Trivia App</h1>
-                    <p>An app that allows users to select a category, and get five questions to answer about that category. Made with React, JavaScript, and CSS.</p>
+                    <h1 class="text-3xl mt-4 underline font-bold ">Trivia App</h1>
+                    <p class="2xl:text-xl">An app that allows users to select a category, and get five questions to answer about that category. Made with React, JavaScript, and CSS.</p>
                     <div class="mt-4">
-                        <a href="https://entertainementrivia.netlify.app/" target="_blank" class="inline-block bg-lttrbxdGreen mr-4 text-white font-bold p-1.5 rounded-lg hover:bg-green-700">Live Site</a>
-                        <a href="https://github.com/Jefferyi-Magtubo/Entertainment-Trivia" target="_blank" class="inline-block bg-lttrbxdOrg text-white font-bold  p-1.5 rounded-lg hover:bg-orange-600">Code</a>
+                        <a href="https://entertainementrivia.netlify.app/" target="_blank" class="inline-block bg-lttrbxdGreen mr-4 text-white font-bold p-1.5 rounded-lg hover:bg-green-700 2xl:text-xl">Live Site</a>
+                        <a href="https://github.com/Jefferyi-Magtubo/Entertainment-Trivia" target="_blank" class="inline-block bg-lttrbxdOrg text-white font-bold  p-1.5 rounded-lg hover:bg-orange-600 2xl:text-xl">Code</a>
                     </div>
                 </div>
                 <div class="flex flex-col items-center justify-center p-8 lg:w-1/2 hover:shadow-white">
                     <img src="watchlistpic.PNG" class="w-4/5 xs:hidden sm:block">
-                    <h1 class="text-2xl mt-4 underline font-bold ">Movie Watchlist</h1>
-                    <p>An app that allows users to search and add movies to a watchlist. Made with Vanilla JavaScript, HTML, and CSS.</p>
+                    <h1 class="text-3xl mt-4 underline font-bold ">Movie Watchlist</h1>
+                    <p class="2xl:text-xl">An app that allows users to search and add movies to a watchlist. Made with Vanilla JavaScript, HTML, and CSS.</p>
                     <div class="mt-4">
-                        <a href="https://jeffsmoviewatchlist.netlify.app/" target="_blank" class="inline-block bg-lttrbxdGreen mr-4 text-white font-bold p-1.5 rounded-lg hover:bg-green-700">Live Site</a>
-                        <a href="https://github.com/Jefferyi-Magtubo/Movie-Watchlist" target="_blank" class="inline-block bg-lttrbxdOrg text-white font-bold  p-1.5 rounded-lg hover:bg-orange-600">Code</a>
+                        <a href="https://jeffsmoviewatchlist.netlify.app/" target="_blank" class="inline-block bg-lttrbxdGreen mr-4 text-white font-bold p-1.5 rounded-lg hover:bg-green-700 2xl:text-xl">Live Site</a>
+                        <a href="https://github.com/Jefferyi-Magtubo/Movie-Watchlist" target="_blank" class="inline-block bg-lttrbxdOrg text-white font-bold  p-1.5 rounded-lg hover:bg-orange-600 2xl:text-xl">Code</a>
                     </div>
                 </div>
                 <div class="flex flex-col items-center justify-center p-8 lg:w-1/2 hover:shadow-white">
                     <img src="passwordpic.PNG" class="w-4/5 xs:hidden sm:block">
-                    <h1 class="text-2xl mt-4 underline font-bold ">Random Password Generator</h1>
-                    <p>An app that allows users to randomly generate passwords. Made with Vanilla JavaScript, HTML, and CSS. Refactored to use TypeScript.</p>
+                    <h1 class="text-3xl mt-4 underline font-bold ">Random Password Generator</h1>
+                    <p class="2xl:text-xl">An app that allows users to randomly generate passwords. Made with Vanilla JavaScript, HTML, and CSS. Refactored to use TypeScript.</p>
                     <div class="mt-4">
                         <a href="https://jeffspasswordgenerator.netlify.app/" target="_blank" class="inline-block bg-lttrbxdGreen mr-4 text-white font-bold p-1.5 rounded-lg hover:bg-green-700">Live Site</a>
                         <a href="https://github.com/Jefferyi-Magtubo/Random-Password-Generator" target="_blank" class="inline-block bg-lttrbxdOrg text-white font-bold  p-1.5 rounded-lg hover:bg-orange-600">Code</a>
