--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                     <p class="p-1 rounded-md bg-slate-900 mr-2 mb-2">JavaScript</p>
                     <p class="p-1 rounded-md bg-slate-900 mr-2 mb-2">Tailwind CSS</p>
                     <p class="p-1 rounded-md bg-slate-900 mr-2 mb-2">CSS</p>
+                    <p class="p-1 rounded-md bg-slate-900 mr-2 mb-2">Bootstrap</p>
                     <p class="p-1 rounded-md bg-slate-900 mr-2 mb-2">HTML</p>
                     <p class="p-1 rounded-md bg-slate-900 mr-2 mb-2">Wordpress</p>
                     <p class="p-1 rounded-md bg-slate-900 mr-2 mb-2">Responsive Design</p>
