Added new skill

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                 <h1 class="text-white text-5xl">Jefferyi Magtubo</h1>
                 <h2 class="mt-2">Passionate front-end developer eager to use their skills in a professional enviroments.</h2>
                 <div class="flex flex-wrap mt-2 text-sm">
+                    <p class="p-1 rounded-md bg-slate-900 mr-2 mb-2">Next.js</p>
                     <p class="p-1 rounded-md bg-slate-900 mr-2 mb-2">React</p>
                     <p class="p-1 rounded-md bg-slate-900 mr-2 mb-2">TypeScript</p>
                     <p class="p-1 rounded-md bg-slate-900 mr-2 mb-2">JavaScript</p>
