--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
     <header class="bg-darkBlack flex px-4 py-12 justify-center items-center fixed top-0 inset-x-0">
         <div class="flex">
             <h2 class="mr-16 hover:text-white"><a href="#projects">Work</a></h2>
-            <h2 class="mr-16 hover:text-white"><a href="#contact">Certificates</a></h2>
+            <h2 class="mr-16 hover:text-white"><a href="#certificates">Certificates</a></h2>
+            <h2 class="mr-16 hover:text-white"><a href="#contact">Contact</a></h2>
             <h2 class="hover:text-white"><a href="Resume (Marketing) nosw 2.docx-2.pdf" download="">Resume</a></h2>
         </div>
     </header>
@@ -63,7 +64,7 @@
             <div class="flex-col my-auto sm:mr-4 md:mr-16">
                 <h2 class="text-xs">Hi, my name is</h2>
                 <h1 class="text-white text-5xl">Jefferyi Magtubo</h1>
-                <h2 class="mt-2">Recent graduate looking to gain markerting experience</h2>
+                <h2 class="mt-2">Recent graduate looking to gain markerting experience. Open to internships and full-time positions.</h2>
                 <div class="flex flex-wrap mt-2 text-sm">
                     <p class="p-1 rounded-md bg-slate-900 mr-2 mb-2">Next.js</p>
                     <p class="p-1 rounded-md bg-slate-900 mr-2 mb-2">React</p>
@@ -88,7 +89,7 @@
 
         <section id="projects" class="bg-lighterBlack flex-col p-16 py-32 flex items-center">
             <h1 class="text-5xl">Media/Work</h1>
-            <p class="mt-4 mb-8">All my work that pertains to marketing. Includes social media posts and a website I developed. Clicking on any square will lead to that social post/website.</p>
+            <p class="mt-4 mb-8">All my work that pertains to marketing. Includes social media posts and a website I developed. Clicking on any square will lead to that social post/website. All posts were made with Canva and site developed with Wix.</p>
             <div class="flex flex-wrap mt-2 ">
                 <div class="flex flex-col items-center justify-center  mb-8 md:w-1/2 lg:pr-8 lg:w-1/4 ">
                     <a href="https://www.instagram.com/p/Cj3PdFXJdKH/?img_index=1" target="_blank"><img src="grsocial.png" class="hover:shadow-white  sm:block "></a>
@@ -111,12 +112,25 @@
                 <div class="flex flex-col items-center justify-center mb-8 md:w-1/2 lg:pr-8 lg:w-1/4 ">
                     <a href="https://www.instagram.com/p/Cj3PdFXJdKH/?img_index=1" target="_blank"><img src="scharflyer.png" class="hover:shadow-white  sm:block "></a>
                 </div>
-
             </div>
+
+            <div class="flex flex-wrap mt-8 ">
+                <img src="websiteeyes.png" class="hover:shadow-white w-1/2  sm:block " />
+                <p class="w-1/4 my-auto mx-auto">A website I developed for a local optometrist office. Optimized for SEO and conversions.</p>
+            </div>
+
+            <p class="mt-8">The rest of my web development work can be found <a href="https://jefferyiwebsite.netlify.app/" class="text-white hover:text-gray-500">here.</a></p>
             
         </section>
 
-        <section id="contact" class="p-16 py-32">
+        <section id="certificates" class="p-16 py-32">
+
+            <h1 class="text-5xl text-center">Contact</h1>
+            <p class="text-center mt-4 lg:w-1/2 lg:mx-auto">Looking to connect? Feel free to reach out to me through email (jefferyi.magtubo@gmail.com) or phone (832-867-6875). Alternatively, you can message me on LinkedIn <a target="_blank" class="text-white hover:text-gray-500" href="https://www.linkedin.com/in/jefferyi-magtubo-6092111b8/">here</a>. I'll get back to you as soon as possible!</p>
+
+        </section>
+
+        <section id="contact" class="p-16 py-32 bg-lighterBlack">
 
             <h1 class="text-5xl text-center">Contact</h1>
             <p class="text-center mt-4 lg:w-1/2 lg:mx-auto">Looking to connect? Feel free to reach out to me through email (jefferyi.magtubo@gmail.com) or phone (832-867-6875). Alternatively, you can message me on LinkedIn <a target="_blank" class="text-white hover:text-gray-500" href="https://www.linkedin.com/in/jefferyi-magtubo-6092111b8/">here</a>. I'll get back to you as soon as possible!</p>
@@ -125,7 +139,6 @@
 
         <footer class="bg-darkBlack py-12 text-center">
             <a href="https://www.linkedin.com/in/jefferyi-magtubo-6092111b8/" target="_blank"><i class="fa-brands fa-linkedin mr-4 hover:text-linklnBlue hover:cursor-pointer"></i></a>
-            <a href="https://github.com/Jefferyi-Magtubo" target="_blank"><i class="fa-brands fa-github mr-4 hover:text-githubBlack hover:cursor-pointer"></i></a>
             <a href="mailto:jefferyi.magtubo@gmail.com" target="_blank"><i class="fa-solid fa-envelope hover:text-lttrbxdGreen hover:cursor-pointer"></i></a>
         </footer>
     </main>
