--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <div class="flex flex-col items-center justify-center p-8 lg:w-1/2 hover:shadow-white">
                     <img src="memorygame.PNG" class="w-4/5 xs:hidden sm:block ">
                     <h1 class="text-3xl mt-4 underline font-bold ">Memory Game</h1>
-                    <p class="2xl:text-xl">A fully functional web app game to test your memory. Choose between a 4x4 or 6x6 grid. Made with React, TypeScript, and Tailwind CSS. </p>
+                    <p class="2xl:text-xl">A web app game to test your memory. Choose between a 4x4 or 6x6 grid. Made with React, TypeScript, and Tailwind CSS. </p>
                     <div class="mt-4">
                         <a href="https://jeffmemorygame.netlify.app/" target="_blank" class="inline-block bg-lttrbxdGreen mr-4 text-white font-bold p-1.5 rounded-lg hover:bg-green-700 2xl:text-xl">Live Site</a>
                         <a href="https://github.com/Jefferyi-Magtubo/Memory-Game" target="_blank" class="inline-block bg-lttrbxdOrg text-white font-bold  p-1.5 rounded-lg hover:bg-orange-600 2xl:text-xl">Code</a>
